@@ -147,6 +147,9 @@ RELEASE 0.95 - XXX
   - Provide a more useful error message if a construction variable
     expansion contains a syntax error during evaluation.
 
+  - Fix transparent checkout of implicit dependency files from SCCS
+    and RCS.
+
   From Vincent Risi:
 
   - Add support for the bcc32, ilink32 and tlib Borland tools.
